--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,15 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
     - name: Instalar dependências para testes e migrations
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r clinic/requirements.txt
 
     - name: Rodar testes
       run: |
