--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,13 @@ jobs:
         python-version: '3.11'
 
     - name: Instalar dependências para testes e migrations
+      working-directory: clinic
       run: |
         python -m pip install --upgrade pip
-        pip install -r clinic/requirements.txt
+        pip install -r requirements.txt
 
     - name: Rodar testes
+      working-directory: clinic
       run: |
         python manage.py test
 
