--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,11 +39,13 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build da imagem Docker
+      working-directory: clinic
       run: |
         docker build -t ${{ secrets.ECR_REPOSITORY }} .
         docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
 
     - name: Push da imagem para o ECR
+      working-directory: clinic
       run: |
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
 
